rust/core/src/store/snapshots/lucid_suggest_core__store__trigrams__tests__trigrams_basic-4.snap
---
source: src/store/trigrams.rs
expression: output
---
[
    [
        'f',
        '\u{0}',
        '\u{0}',
    ],
    [
        'f',
        'o',
        '\u{0}',
    ],
    [
        'f',
        'o',
        'o',
    ],
]
